# CppEducation

./: .gitignore  CMakeLists.txt  README.md
ArraysAndStrings/: ArrayUtils.cpp  ArrayUtils.h  Q01.cpp  Q02.cpp  Q02.h  Q03.cpp  Q03.h  Q04.cpp  Q05.cpp  Q06.cpp  Q07.cpp  Q08.cpp  Q09.cpp  TreeTest.h
CppEducation/: Alghoritms.sln
CppEducation/Alghoritms/: Alghoritms.vcxproj  Alghoritms.vcxproj.filters  CMakeLists.txt  InsertionSortDescEnumerator.cpp  InsertionSortDescEnumerator.h  InsertionSortEnumerator.cpp  InsertionSortEnumerator.h  InsertionSorter.cpp  InsertionSorter.h  LifeUniverseEverythingMirror.cpp  LifeUniverseEverythingMirror.h  main.cpp  sorter.h  stdafx.h
CppEducation/Alghoritms-Tests/: Alghoritms-Tests.vcxproj  insertion-sort-tests.cpp  insertion-sorter-tests.cpp  pch.h  sort_helper.cpp  sort_helper.h  test.cpp
LinkedList/: LinkedListUtils.h  Node.h  Q01.cpp  Q02.cpp  Q03.cpp  Q04.cpp  Q05.cpp  Q06.cpp  Q07.cpp  Q08.cpp
arrays_and_strings/: CMakeLists.txt
arrays_and_strings/is_one_edit_away/: CMakeLists.txt  check_is_one_edit_away.h  test.cpp
arrays_and_strings/is_palindromes_permutation/: CMakeLists.txt  check_is_palindromes_permutation.h  test.cpp
arrays_and_strings/is_permutation/: CMakeLists.txt  check_is_permutation.h  test.cpp
arrays_and_strings/is_unique/: CMakeLists.txt  check_is_unique.h  test.cpp
arrays_and_strings/matrix_rotation/: CMakeLists.txt  rotate_matrix.h  test.cpp
arrays_and_strings/string_compression/: CMakeLists.txt  compress_string.h  test.cpp
arrays_and_strings/string_rotation/: CMakeLists.txt  check_is_rotation.h  test.cpp
arrays_and_strings/urlify/: CMakeLists.txt  test.cpp  urlify_string.h
arrays_and_strings/zero_matrix/: CMakeLists.txt  make_zero_matrix.h  test.cpp
linked_list/: CMakeLists.txt
linked_list/check_for_intersection/: CMakeLists.txt  get_intersection_node.h  test.cpp
linked_list/check_palindrome/: CMakeLists.txt  check_is_palindrome.h  test.cpp
linked_list/kth_to_last/: CMakeLists.txt  find_kth_to_last.h  test.cpp
linked_list/loop_detection/: CMakeLists.txt  detect_loop.h  test.cpp
linked_list/middle_node_removal/: CMakeLists.txt  delete_middle_node.h  test.cpp
linked_list/partition/: CMakeLists.txt  list_partition.h  test.cpp
linked_list/remove_dups/: CMakeLists.txt  remove_duplicates.h  test.cpp
linked_list/sum_lists/: CMakeLists.txt  sum_numbers_in_list.h  test.cpp
scratches/: tuple_printer.cpp
stacks_and_queue/: Q01.cpp  Q03.cpp  Q04.cpp  Q05.cpp  Q06.cpp  SetOfStacks.h  StackBasedQueue.h  StackMin.h  utils.h
trees_and_graphs/: Graph.h  GraphNode.h  Q01.cpp  Q02.cpp  Q03.cpp  Q04.cpp  Q05.cpp  Tree.h  TreeTest.cpp
util/: linked_list_node.h  matrix.h  matrix_column_iter.h
