add_subdirectory(is_unique)
add_subdirectory(is_permutation)
add_subdirectory(urlify)
add_subdirectory(is_palindromes_permutation)
add_subdirectory(is_one_edit_away)
add_subdirectory(string_compression)
add_subdirectory(matrix_rotation)
add_subdirectory(zero_matrix)
add_subdirectory(string_rotation)